<!--
  ~ Omnibus
  ~ Copyright © 2026 Anand Beh
  ~
  ~ Omnibus is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Omnibus is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with Omnibus. If not, see <https://www.gnu.org/licenses/>
  ~ and navigate to version 3 of the GNU Lesser General Public License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.libertybans</groupId>
	<artifactId>omnibus</artifactId>
	<version>1.1.0-SNAPSHOT</version>

	<name>Omnibus</name>
	<description>Events, services, and concurrency frameworks</description>
	<url>https://github.com/A248/Omnibus</url>
	<inceptionYear>2019</inceptionYear>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>5.7.1</junit.version>
		<mockito.version>3.9.0</mockito.version>
		<maven.compiler.release>11</maven.compiler.release>
		<jacoco.argLine />
	</properties>

	<scm>
		<connection>scm:git:ssh://git@github.com/A248/Omnibus.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/A248/Omnibus.git</developerConnection>
		<url>http://github.com/A248/Omnibus/tree/version1</url>
	  <tag>HEAD</tag>
  </scm>

	<licenses>
		<license>
			<name>GNU Lesser General Public License, Version 3</name>
			<url>https://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>a248</id>
			<name>A248</name>
			<email>a248-dev@tuta.io</email>
			<url>https://github.com/A248</url>
			<roles>
				<role>creator</role>
				<role>developer</role>
			</roles>
			<timezone>America/New_York</timezone>
		</developer>
	</developers>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<executions>
					<execution>
						<id>compile-concurrency-test</id>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<configuration>
							<release>16</release>
							<outputDirectory>${project.build.directory}/concurrency-test-classes</outputDirectory>
							<compileSourceRoots>
								<compileSourceRoot>src/test/java-concurrency</compileSourceRoot>
							</compileSourceRoots>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<trimStackTrace>false</trimStackTrace>
					<argLine>@{jacoco.argLine} -XX:TieredStopAtLevel=1 -XX:-TieredCompilation
					--add-opens space.arim.omnibus/space.arim.omnibus.defaultimpl.registry=ALL-UNNAMED</argLine>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>${junit.version}</version>
						<scope>runtime</scope>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M5</version>
				<executions>
					<execution>
						<id>test-concurrency</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
						<configuration>
							<testSourceDirectory>src/test/java-concurrency</testSourceDirectory>
							<testClassesDirectory>${project.build.directory}/concurrency-test-classes</testClassesDirectory>
						</configuration>
					</execution>
					<execution>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<trimStackTrace>false</trimStackTrace>
					<argLine>@{jacoco.argLine}</argLine>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>${junit.version}</version>
						<scope>runtime</scope>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-invoker-plugin</artifactId>
				<version>3.2.2</version>
				<executions>
					<execution>
						<id>install-artifacts</id>
						<goals>
							<goal>install</goal>
						</goals>
					</execution>
					<execution>
						<id>test-api-consumers</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
						<configuration>
							<goals>verify</goals>
						</configuration>
					</execution>
					<execution>
						<id>verify-api-consumers</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
					<localRepositoryPath>${project.build.directory}/local-it-repo</localRepositoryPath>
					<parallelThreads>5</parallelThreads>
					<settingsFile>src/it/settings.xml</settingsFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>javadoc</goal>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.7</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
						<configuration>
							<bestPractices>true</bestPractices>
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<tagNameFormat>@{project.version}</tagNameFormat>
					<goals>clean deploy -Prelease-to-central</goals>
					<pushChanges>false</pushChanges>
					<localCheckout>true</localCheckout>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release-to-central</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.11.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<checksums>all</checksums>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>codecov</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.6</version>
						<executions>
							<execution>
								<id>default-prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<propertyName>jacoco.argLine</propertyName>
								</configuration>
							</execution>
							<execution>
								<id>default-report</id>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
